Add password generator; Add Auth model
