# app/models/auth_model.go
@@ -1,0 +1,7 @@
+package models
+
+// Auth struct to describe auth object.
+type Auth struct {
+	Email    string `json:"email" validate:"required,email,lte=255"`
+	Password string `json:"password" validate:"required,lte=255"`
+}
