# app/models/user_model.go
@@ -8,10 +8,10 @@ import (
 
 // User struct to describe User object.
 type User struct {
-	ID           uuid.UUID `db:"id" json:"id" validate:"required,uuid4"`
+	ID           uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
 	CreatedAt    time.Time `db:"created_at" json:"created_at"`
 	UpdatedAt    time.Time `db:"updated_at" json:"updated_at"`
 	Email        string    `db:"email" json:"email" validate:"required,email,lte=255"`
-	PasswordHash string    `db:"password_hash" json:"password_hash" validate:"required,lte=255"`
-	UserStatus   int       `db:"User_status" json:"User_status"`
+	PasswordHash string    `db:"password_hash" json:"password_hash,omitempty" validate:"required,lte=255"`
+	UserStatus   int       `db:"user_status" json:"user_status"`
 }
