# pkg/routes/public_routes.go
@@ -14,6 +14,10 @@ func PublicRoutes(a *fiber.App) {
 	route.Get("/books", controllers.GetBooks)   // get list of all books
 	route.Get("/book/:id", controllers.GetBook) // get one book by ID
 
+	// Routes for POST method:
+	route.Post("/user/login", controllers.UserLogin)     // auth user and return JWT
+	route.Post("/user/register", controllers.CreateUser) // register a new user
+
 	// Route for generate JWT token.
 	// route.Get("/token", func(c *fiber.Ctx) error {
 	// 	credentials := []string{"book:delete"}
